# twitchmote

./: .gitignore  Cargo.toml  README.md  config.toml  requirements.txt
src/: main.rs
