[package]
name = "twitchmote_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
emoji_builder = { git = "https://github.com/modprog/emoji_builder" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
twitch_api2 = { version = "0.5.0", features = ["helix", "client", "surf"] }
twitch_oauth2 = { version = "0.6.0", features = ["surf_client"] }
