[package]
name = "twitchmote_builder"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
emoji_builder = { git = "https://github.com/modprog/emoji_builder" }
futures = "0.3.17"
reqwest = { version = "0.11.4" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5.8"
twitch_api2 = { version = "0.6.0-rc.3", features = ["helix", "reqwest_client"] }
twitch_oauth2 = { version = "0.6.0", features = ["reqwest_client"] }
